fix alignment of some elements in css

--- a/wordpress/wp-content/themes/Avada/custom.css
+++ b/wordpress/wp-content/themes/Avada/custom.css
@@ -21,7 +21,10 @@ body {
 		sans-serif !important;
 	color: #000 !important;
 }
-
+#wrapper {
+	margin:auto;
+	max-width:1000px!important;
+}
 .fusion-button {
 	font-size: 15px;
 }
@@ -108,7 +111,8 @@ body {
 	font-weight: bold;
 }
 #post-16 .fusion-recent-posts {
-	height: 200px;
+	height: 250px;
+	line-height:1.5;
     overflow-y: scroll;
 	
 }
@@ -204,7 +208,9 @@ body {
 	border: 2px solid #dd3333;
 	padding-top: 10px;
 }
-
+#post-3298 .fusion-fullwidth-3 .fusion-li-item-content {
+	text-align:left;
+}
 #post-3298 .post-content .fusion-fullwidth .fusion-row ul li,
 #post-3298 .post-content .fusion-fullwidth-4 .fusion-row .fusion-one-full,
 #post-3298 .post-content .fusion-fullwidth-5 .fusion-row .fusion-one-full,
@@ -218,14 +224,17 @@ body {
 #post-3298 .post-content .fusion-fullwidth-2 .fusion-row ul li div {
 	color: #ff0000;
 	font-weight: bold;
+	text-align:left;
 }
 
 #post-3298 .post-content .fusion-fullwidth-2 .fusion-row p {
 	padding: 0 5px;
 	line-height: 1.3;
+	text-align:left;
 }
 
 #post-3298 .post-content .fusion-fullwidth-4 .fusion-row .one_third p {
+	border: 1px solid #000066;
 	line-height: 1.5;
 	margin-bottom: 5px;
     padding: 0 5px;
@@ -288,7 +297,6 @@ body {
 #post-3299 .post-content .fusion-fullwidth-2 p {
 	line-height: 1.2;
 	padding: 0px 80px;
-	font-size: 12px;
 }
 
 #post-3299 .post-content .fusion-fullwidth-2 .fusion-one-sixth {
@@ -324,7 +332,7 @@ body {
 #post-3299 .post-content .fusion-fullwidth-3 .fusion-one-third, 
 #post-3301 .post-content .fusion-fullwidth-2 .fusion-one-half,
 #post-3301 .post-content .fusion-fullwidth-4 .fusion-two-fifth {
-	margin-right: 0;
+	/* margin-right: 0; */
 }
 
 #post-3299 .post-content .fusion-fullwidth-3 .imageframe-align-center {
@@ -347,9 +355,9 @@ body {
 /* Introduction Page */
 #post-3301 .post-content .fusion-fullwidth-1 p, #post-3301 .post-content 
 .fusion-fullwidth-2 p {
-	font-size: 12px;
 	line-height: 1.5;
-	padding: 0px 96px;
+ 	text-align: left!important;
+    padding: 0 10px;
 }
 
 #post-3301 .post-content .fusion-fullwidth-1 p span {
@@ -367,8 +375,8 @@ body {
 }
 
 #post-3301 .post-content .fusion-fullwidth-2 .fusion-one-half.left-margin 
-.fusion-column-wrapper {
-	margin-left: 90px;
+.fusion-column-wrapper {/* 
+	margin-left: 90px; */
 	margin-right: 0;
 } 
 
@@ -383,9 +391,7 @@ body {
 }
 
 #post-3301 .post-content .fusion-fullwidth-3 p.p2 {
-	font-size: 12px;
-	line-height: 1.3;
-	padding: 0 145px;
+	line-height: 1.5;
 }
 
 #post-3301 .post-content .fusion-fullwidth-3 .fusion-one-half,
@@ -474,7 +480,7 @@ body {
 }
 
 #post-3301 .post-content .fusion-fullwidth-5 {
-	padding-bottom: 50px !important;
+	/* padding-bottom: 50px !important; */
 }
 
 #post-3301 .post-content .fusion-fullwidth-5 p.p2 {
@@ -499,7 +505,32 @@ body {
 	padding-right: 91px;
 	font-size: 12px;
 }
-
+.page-id-3301 .fusion-fullwidth-6 .imageframe-14, .page-id-3301 .fusion-fullwidth-8 .imageframe-17, .page-id-3301 .fusion-fullwidth-8 .imageframe-19, .page-id-3301 .fusion-fullwidth-8 .imageframe-21, .page-id-3301 .fusion-fullwidth-8 .imageframe-23, .page-id-3301 .fusion-fullwidth-8 .imageframe-25, .page-id-3301 .fusion-fullwidth-10 .imageframe-28, .page-id-3301 .fusion-fullwidth-10 .imageframe-31 {
+	padding-bottom: 25px;
+}
+.page-id-3301 .fusion-fullwidth-4 .fusion-one-half, .page-id-3301 .fusion-fullwidth-5 .fusion-one-half, .page-id-3301 .fusion-fullwidth-8 .fusion-two-fifth, .page-id-3301 .fusion-fullwidth-10 .fusion-two-fifth {
+	margin-right:0;
+}
+.page-id-3301 .fusion-fullwidth-10 .fusion-three-fifth .fusion-column-wrapper {
+	padding-right: 125px;
+}
+.page-id-3301 .fusion-fullwidth-10 .fusion-separator {
+	border-top: 1px solid #666666;
+    margin-bottom: 10px;
+    margin-left: 158px !important;
+    margin-right: 164px !important;
+}
+.page-id-3301 .fusion-fullwidth-10 .imageframe-29, .page-id-3301 .fusion-fullwidth-10 .imageframe-30, .page-id-3301 .fusion-fullwidth-10 .imageframe-32 {
+	padding-left: 148px;
+}
+.page-id-3301 .fusion-fullwidth-10 .imageframe-33, .page-id-3301 .fusion-fullwidth-10 .imageframe-34{
+	padding-left: 145px;
+}
+.page-id-3301 p.m02 {
+	line-height: 1.5;
+    text-align: left;
+    padding: 0 10px !important;
+}
 /* News page */
 #post-16 .fusion-fullwidth-1 .fusion-recent-posts section {
 	margin-left: 70px;
@@ -512,9 +543,8 @@ body {
 	padding: 0;
 }
 
-#post-16 .fusion-fullwidth-1 .fusion-recent-posts p {
-	line-height: 1.3;
-	font-size: 12px;
+#post-16 .fusion-fullwidth-1 .fusion-recent-posts .recent-posts-content  {
+	text-align:left;
 }
 
 #post-16 .fusion-fullwidth-1 .fusion-recent-posts p.meta {
@@ -1003,7 +1033,7 @@ input[type="checkbox"].confirm-checkbox.on {
 }
 
 .fusion-fullwidth {
-	text-align: center;
+	/* text-align: center; */
 }
 
 div.table-1 {
